--- a/STM32_F750_test/MDK-ARM/STM32_F750_test/STM32_F750_test.build_log.htm
+++ b/STM32_F750_test/MDK-ARM/STM32_F750_test/STM32_F750_test.build_log.htm
@@ -22,14 +22,35 @@ Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 E:\Study\ST\STM32F750\Study_F750N8\STM32_F750_test\MDK-ARM\STM32_F750_test.uvprojx
-Project File Date:  05/28/2019
+Project File Date:  05/29/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32_F750_test'
+assembling startup_stm32f750xx.s...
+compiling stm32f7xx_it.c...
+compiling stm32f7xx_hal_msp.c...
 compiling main.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal_usart.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal_i2c.c...
+compiling stm32f7xx_hal_exti.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling system_stm32f7xx.c...
 linking...
-Program Size: Code=3180 RO-data=504 RW-data=20 ZI-data=1028  
+Program Size: Code=7020 RO-data=520 RW-data=28 ZI-data=1204  
 FromELF: creating hex file...
 "STM32_F750_test\STM32_F750_test.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +75,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:54
 </pre>
 </body>
 </html>
